--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .vscode/*
 build/.cmake/*
 build/CMakeFiles/*
-CMakeCache.txt
-cmake_install.cmake
+build/CMakeCache.txt
+build/cmake_install.cmake
 .o
 .obj
 .exe
